Fixed horizontal scrolling

--- a/_sass/external/_reset.scss
+++ b/_sass/external/_reset.scss
@@ -234,6 +234,7 @@ samp {
   font-size: 10pt;
   background-color: #f0f0f0;
   padding-left: 3px;
+  overflow: auto;
 }
 
 
